Fixed issues on IE.

--- a/graphics/production/css/themes/default/articles.css
+++ b/graphics/production/css/themes/default/articles.css
@@ -1,47 +1,38 @@
 /* News Home Page
 ------------------------------------------------*/
-div.articles {
-    background: white;
-    -webkit-border-radius: 16px;
-    padding: 1em;
+.articles ol {
+    margin: 0 0 0 1em;
 }
 
-div.articles ol {
-    margin: 0 3em 0 1em;
-}
-
-div.articles ol li {
+.articles ol li {
     margin: 1em 0;
 }
 
-div.articles ol h3 {
+.articles ol h3 {
     font-style: italic;
-    font-family: "Brioso Pro";
-    font-size: 200%;
+    font-size: 150%;
 }
 
-div.articles ol h3 a{
+.articles ol h3 a{
     color: rgb(143,193,0);
 }
 
-div.articles ol h4 {
-    line-height: 1.4em;
+.articles ol h4 {
     display: inline-block;
     font-style: italic;
 }
-div.articles ol h4 a {
+.articles ol h4 a {
     font-style: normal;
 }
 
-div.articles ol h5 {
+.articles ol h5 {
     display: inline-block;
     margin-left: 0.2em;
     font-size: smaller;
 }
 
-div.articles ol p {
+.articles ol p {
     line-height: 1.4em;
-    margin: 0.5em 0 1.5em;
 }
 
 #createarticle, #updatearticle, #update{
@@ -51,24 +42,11 @@ div.articles ol p {
 #createarticle input, #createarticle textarea,
 #updatearticle input, #updatearticle textarea,
 #publish input, #publish textarea {
-    width: 100%;
-}
-
-#news-notifications {
-    margin-bottom: 1em;
-    background: white;
-    padding: 1em;
-    -webkit-border-radius: 16px;
+    width: 90%;
 }
 
 #news-notifications ul {
     margin-left: 1em;
-}
-
-#news-archive {
-    background: white;
-    -webkit-border-radius: 16px;
-    padding: 1em;
 }
 
 #news-archive ul {
@@ -101,6 +79,19 @@ div.articles ol p {
     vertical-align: top;
 }
 
+#createarticle #tags,
+#updatearticle #tags,
+#publish #tags {
+    float: left;
+    width: 50%;
+}
+
+#tags_help {
+    font-size: 1em;
+    float:right;
+    width: 48%;
+}
+
 /* Article Page
 ------------------------------------------------*/
 .article ul {
@@ -108,7 +99,6 @@ div.articles ol p {
     width: 23.1%;
     margin-left: 1.3%;
     padding-right: 3%;
-    padding-top: 0.5em;
 }
 .article ul h4 {
     font-style: italic;
@@ -123,6 +113,6 @@ div.articles ol p {
 }
 
 .article p {
-    margin: 0.5em 0 1.5em;
+    margin: 0 0 1.5em;
     line-height: 1.4em;
 }
