--- a/graphics/production/css/themes/default/layout.css
+++ b/graphics/production/css/themes/default/layout.css
@@ -1,8 +1,7 @@
 /* page structure
 --------------------------------------------- */
 .content {
-    margin-top: 1em;
-    border: 1px solid red;
+    margin: 1em;
     position: relative;
 }
 
@@ -11,12 +10,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 1em;
     border: 1px solid rgb(113,179,226);
     background: rgb(212,231,244);
     background: rgba(212,231,244,0.7);
     font-size: smaller;
-    padding: 0.7em 1em;
+    padding: 0.2em 1em;
 }
 
 /* header
@@ -42,7 +40,6 @@
 
 .logo h1 {
     vertical-align: middle;
-    font-family: "Brioso Pro";
     font-style: italic;
     font-size: 3em;
     padding-left: 2.3em;
@@ -146,57 +143,70 @@ for aligning to grid
     float: left;
     width: 43.72%;
     margin: 1em 0 0 2.3%;
-    padding-right: 3%;
 }
 
 .col2_50_Percent {
     float: left;
     width: 43.72%;
-    margin: 1em 0 1em 1.7%;
-    padding-right: 3%;
+    margin: 1em 0 0 2.3%;
 }
 
 /* 2 Columns Liquid Layout 2/3 + 1/3 with Guttering
 ------------------------------------------------*/
 .col1_66_Percent {
     float: left;
-    width: 58.235%;
+    width: 60%;
     margin: 1em 0 0 2.3%;
-    padding-right: 3%;
 }
 
 .col2_33_Percent {
     float: left;
-    width: 29.1%;
-    margin: 1em 0 1em 1.7%;
-    padding-right: 3%;
+    width: 30%;
+    margin: 1em 0 0 2.3%;
+}
+
+/* 2 Columns Liquid Layout 2/3 + 1/3 with Guttering
+------------------------------------------------*/
+.col1_33_Percent {
+    float: left;
+    width: 30%;
+    margin: 1em 0 0 2.3%;
+}
+
+.col2_66_Percent {
+    float: left;
+    width: 60%;
+    margin: 1em 0 0 2.3%;
 }
 
 /* 2 Columns Liquid Layout 80% + 20% with Guttering
 ------------------------------------------------*/
 .col1_80_Percent {
     float: left;
-    width: 70%;
+    width: 68%;
     margin: 1em 0 0 2.3%;
-    padding-right: 3%;
+    padding-right: 2.3%;
 }
 
 .col2_20_Percent {
     float: left;
-    width: 17.5%;
-    margin: 1em 0 1em 1.7%;
+    width: 18%;
+    margin: 1em 0 0 2.3%;
+}
+
+/* 2 Columns Liquid Layout 20% + 80% with Guttering
+------------------------------------------------*/
+.col1_20_Percent {
+    float: left;
+    width: 15.2%;
+    margin: 1em 0 0 2.3%;
+    padding-right: 2.3%;
+}
+
+.col2_80_Percent {
+    float: left;
+    width: 70%;
+    margin: 1em 0 1em 2.3%;
     padding-right: 3%;
 }
 
-
-/* positioning
-------------------------------------------------*/
-.left {
-    float: left;
-    width: 74.9%;
-}
-
-.right {
-    float: right;
-    width: 25%;
-}
